Jump Menu Fix

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ nav > ul > li > a {
 
 #jump-menu {
   position: fixed;
-  top: 125px;
+  top: 122px;
   width: 100%;
   padding: 10px 20px;
   background: #fff8f0;
